# simple-async-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yaml
examples/: add_task.rs  multiple.rs  simple.rs
src/: executor.rs  futures.rs  lib.rs  macros.rs  task.rs  waker.rs
